--- a/pictureSNS/TableViewShowPictureCell.xib
+++ b/pictureSNS/TableViewShowPictureCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -17,7 +17,7 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="600"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="R1D-aY-sPL" id="PyC-iL-GVb">
-                <rect key="frame" x="0.0" y="0.0" width="414" height="599"/>
+                <rect key="frame" x="0.0" y="0.0" width="414" height="599.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="130383_n.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="JgB-k0-jZM">
@@ -61,7 +61,7 @@
                             <constraint firstAttribute="height" constant="50" id="hHX-xg-SYg"/>
                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="50" id="yrH-7T-d9k"/>
                         </constraints>
-                        <state key="normal" backgroundImage="14328.png"/>
+                        <state key="normal" backgroundImage="comment.png"/>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="paU-DM-GPt">
                         <rect key="frame" x="23" y="474" width="50" height="50"/>
@@ -136,7 +136,7 @@
     </objects>
     <resources>
         <image name="130383_n.jpg" width="400" height="400"/>
-        <image name="14328.png" width="256" height="182"/>
+        <image name="comment.png" width="512" height="512"/>
         <image name="facebook.png" width="200" height="200"/>
     </resources>
 </document>
